--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <head>
 	<title>1940</title>
 	<link href="css/style.css" rel="stylesheet" type="text/css" />
@@ -12,16 +13,9 @@
 		<canvas id="c"></canvas>
 
 		<div id="info">
-			<h1>1940</h2>
-				<p>
-					Ett HTML5-spel av Mattias Dahlgren.<br />
-					Använder av Canvas-elementet, tillsammans med JavaScript. Läser in fiendepositioner + pickups från extern XML-fil.<br />
-					Fungerar bäst under Google Chrome. Finns en hel del buggar här och där, som kollisiondetekteringen, och att man kan skjuta när man är död - återstår att se om jag orkar fixa detta! :-)
+			<h1>Highscore</h2>
+				<div id="highscore-list"></div>
 
-				</p>
-				<p>
-					Hela projektet tog ungefär 10 timmar att genomföra.
-				</p>
 				<p><strong>Instruktioner:</strong> Styr med piltangenterna och skjut med mellanslag.</p>
 		</div>
 	</div>
@@ -31,4 +25,5 @@
 	<script src="js/sound.js"></script>
 	<script src="js/game.js"></script>
 </body>
+
 </html>
