Update instructions and game title

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 			<h1>Highscore</h2>
 				<div id="highscore-list"></div>
 
-				<p><strong>Instruktioner:</strong> Styr med piltangenterna och skjut med mellanslag.</p>
+				<p style="text-align:center;padding-top: 1em; font-size:1.2em;"><strong>Instruktioner:</strong> Styr med
+					piltangenterna
+					och skjut med mellanslag.</p>
 		</div>
 	</div>
 
